Kubernetes/apps/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: utilities
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: whoami
