Kubernetes/apps/whoami/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: utilities
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.nerine.dev`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: private-chain
          namespace: traefik
  tls:
    certResolver: letsencrypt
    domains:
      - main: nerine.dev
        sans:
          - "*.nerine.dev"
